src/validation/tests/snapshots/rusty__validation__tests__variable_validation_tests__type_initializers_in_structs_are_validated.snap
---
source: src/validation/tests/variable_validation_tests.rs
expression: diagnostics
---
error[E048]: Could not resolve reference to xxx
  ┌─ <internal>:7:41
  │
7 │             unknown_reference : foo := (xxx := 1);
  │                                         ^^^ Could not resolve reference to xxx

error[E043]: Array assignments must be surrounded with `[]`
  ┌─ <internal>:8:62
  │
8 │             invalid_array_assignment : ARRAY[0..1] OF INT := 0;
  │                                                              ^ Array assignments must be surrounded with `[]`
